// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. playicon with containerwidth of 0 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={32}
  bbWidth={32}
  fill="none"
  focusable={false}
  height={32}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 32,
        "width": 32,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width={32}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={-16711667}
      height="64"
      opacity={0.6}
      propList={
        Array [
          "fill",
        ]
      }
      width="64"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20 16V48L44 32L20 16Z"
      fill={-1}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. playicon with containerwidth of 269 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={32}
  bbWidth={32}
  fill="none"
  focusable={false}
  height={32}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 32,
        "width": 32,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width={32}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={-16711667}
      height="64"
      opacity={0.6}
      propList={
        Array [
          "fill",
        ]
      }
      width="64"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20 16V48L44 32L20 16Z"
      fill={-1}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. playicon with containerwidth of 270 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={48}
  bbWidth={48}
  fill="none"
  focusable={false}
  height={48}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 48,
        "width": 48,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width={48}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={-16711667}
      height="64"
      opacity={0.6}
      propList={
        Array [
          "fill",
        ]
      }
      width="64"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20 16V48L44 32L20 16Z"
      fill={-1}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. playicon with containerwidth of 563 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={64}
  bbWidth={64}
  fill="none"
  focusable={false}
  height={64}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 64,
        "width": 64,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width={64}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={-16711667}
      height="64"
      opacity={0.6}
      propList={
        Array [
          "fill",
        ]
      }
      width="64"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20 16V48L44 32L20 16Z"
      fill={-1}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. playicon 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={76}
  bbWidth={76}
  fill="none"
  focusable={false}
  height={76}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 76,
        "width": 76,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width={76}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={-16711667}
      height="64"
      opacity={0.6}
      propList={
        Array [
          "fill",
        ]
      }
      width="64"
      x={0}
      y={0}
    />
    <RNSVGPath
      d="M20 16V48L44 32L20 16Z"
      fill={-1}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
